# HashCalculator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GUI.ui  README.md  Ui_MainWindow.py  Ui_MainWindow.ui  build.sh  hash_algorithms.h  logo.py  logo.qrc  main.cpp  main.py  show_my_frame.cpp  show_my_frame.h  wx_hash_gui.cpp  wx_hash_gui.h
resources/: logo.aps  wxUI.fbp
